# sgqlc

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  Pipfile  README.rst  dev-requirements.txt  flake8-requirements.txt  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/workflows/: ci.yml
doc/source/: conf.py  index.rst  sgqlc.codegen.rst  sgqlc.endpoint.base.rst  sgqlc.endpoint.http.rst  sgqlc.endpoint.requests.rst  sgqlc.endpoint.rst  sgqlc.endpoint.websocket.rst  sgqlc.introspection.rst  sgqlc.operation.rst  sgqlc.rst  sgqlc.types.datetime.rst  sgqlc.types.relay.rst  sgqlc.types.rst  sgqlc.types.uuid.rst
examples/basic/: 03_requests_endpoint.py  README.md  http-endpoint.py  types.py
examples/github/: README.md  github-agile-dashboard.py  github_agile_dashboard.py  github_schema.json  github_schema.py  list_issues.py  sample_operations.gql  sample_operations.py  update-operations.sh  update-schema.sh
examples/shopify/: list_products.py  shopify_operations.gql  shopify_operations.py  shopify_schema.json  shopify_schema.py  update-operations.sh  update-schema.sh
sgqlc/: __init__.py
sgqlc/codegen/: __init__.py  operation.py  schema.py
sgqlc/endpoint/: __init__.py  base.py  http.py  requests.py  websocket.py
sgqlc/introspection/: __init__.py  __main__.py
sgqlc/operation/: __init__.py
sgqlc/types/: __init__.py  datetime.py  relay.py  uuid.py
tests/: test-endpoint-http.py  test-endpoint-requests.py  test-endpoint-websocket.py  test-introspection.py  test-operation-codegen.py
tests/test-resources/operation-codegen/: op-gen.gql  operation-test.json
utils/: release.sh  set-version.py  test-example-common.sh  update-requirements.sh
utils/git/: install-git-hooks.sh  pre-commit  pre-push
