[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
force-exclude = '/(doc/|examples/.*(schema|operations)[.]py)'

[tool.pytest.ini_options]
addopts = '--import-mode=importlib --doctest-modules --cov=sgqlc --cov-fail-under=100 --cov-report=term-missing --cov-report=xml --cov-report=html:cover'
python_files = ['test-*.py', 'test_*.py']
testpaths = [
    'sgqlc',
    'tests',
]
norecursedirs = [
    '.eggs',
    '.git',
    '.github',
    '.venv',
    '*.egg-info',
    'build',
    'cover',
    'dist',
    'doc',
    'examples',
    'utils',
]

[tool.poetry]
name = 'sgqlc'
version = '16.4'
description = 'Simple GraphQL Client'
readme = 'README.rst'
authors = [
    'Gustavo Sverzut Barbieri <barbieri@profusion.mobi>',
]
homepage = 'http://github.com/profusion/sgqlc'
repository = 'http://github.com/profusion/sgqlc'
documentation = 'https://sgqlc.readthedocs.io/'
license = 'ISCL'
keywords = ['graphql', 'client', 'http', 'endpoint']
classifiers=[
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: ISC License (ISCL)',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Utilities',
]
packages = [{ include = 'sgqlc' }]
include = [
    { path = 'AUTHORS', format = 'sdist' },
    { path = 'doc/source', format = 'sdist' },
    { path = 'tests', format = 'sdist' },
]

[tool.poetry.scripts]
sgqlc-codegen = 'sgqlc.codegen:main'

[tool.poetry.dependencies]
# <3.13 is to enable coveralls 4, which requires python >=3.8,<3.13
python = '>=3.8,<3.13'
graphql-core = '^3.2.4'
websocket-client = { version = '*', optional = true }
requests = { version = '*', optional = true }

[tool.poetry.extras]
websocket = ['websocket-client']
requests = ['requests']

[tool.poetry.group.dev.dependencies]
coveralls = '*'
pytest = '*'
pytest-cov = '*'
sphinx = '*'
sphinx-argparse = '*'

[tool.poetry.group.docs.dependencies]
sphinx = '*'
sphinx-argparse = '*'

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
